using Azure;
using Azure.Data.Tables;

namespace VolunteerCheckin.Functions.Models;

public class EventEntity : ITableEntity
{
    public string PartitionKey { get; set; } = Constants.EventPartitionKey;
    public string RowKey { get; set; } = Guid.NewGuid().ToString();
    public DateTimeOffset? Timestamp { get; set; }
    public ETag ETag { get; set; }

    public string Name { get; set; } = string.Empty;
    public string Description { get; set; } = string.Empty;
    public DateTime EventDate { get; set; }
    public string TimeZoneId { get; set; } = "UTC";
    public string AdminEmail { get; set; } = string.Empty;
    public string EmergencyContactsJson { get; set; } = "[]";
    public string GpxRouteJson { get; set; } = "[]";
    public bool IsActive { get; set; } = true;
    public DateTime CreatedDate { get; set; } = DateTime.UtcNow;

    // Terminology settings - allows customizing the wording used in the UI
    // Default values match the original application terminology
    public string PeopleTerm { get; set; } = "Marshals";      // People, Marshals, Volunteers, Helpers, Staff
    public string CheckpointTerm { get; set; } = "Checkpoints"; // Checkpoints, Stations, Locations
    public string AreaTerm { get; set; } = "Areas";           // Areas, Zones
    public string ChecklistTerm { get; set; } = "Checklists"; // Checklists, Tasks
    public string CourseTerm { get; set; } = "Course";        // Course, Route, Trail
}
